Prevent overflow in the project menu (#1196)

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -289,6 +289,11 @@ body > header .locale.select {
   display: none;
 }
 
+.project.select .menu ul li:not(.no-match) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .status.fa {
   left: 16px;
   top: 13px;
